# vaultwarden-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  docker-compose.live-test.yml  justfile  tarpaulin.toml
.cargo/: audit.toml
.githooks/: pre-commit
.github/: dependabot.yaml
.github/actions/cargo-audit/: action.yml
.github/workflows/: ci.yml  daily-maintenance.yml  dependabot-auto-merge.yml  pr-notify-slack.yml  release.yml  test.yml
benches/: vaultwarden_cli_bench.rs
concourse/: Dockerfile  README.md  pipeline.yml  vars.example.yml
docs/: tls-footprint.md
scripts/: benchmark-dhat.sh  scan-staged-secrets.sh  test-live.sh
src/: api.rs  commands.rs  config.rs  crypto.rs  lib.rs  main.rs  models.rs
tests/: api_client.rs  cli.rs  command_basic.rs  config_edge.rs  integration_tests.rs  live_tests.rs  msrv_docs.rs  safety_checks.rs
tests/live/: env.rs  get.rs  interpolate.rs  list.rs  run.rs  session.rs
tests/support/: mod.rs
