[package]
name = "vaultwarden-cli"
version = "0.5.1"
edition = "2024"
rust-version = "1.85"
description = "CLI client for Vaultwarden - retrieve secrets for batch files and environment variables"
authors = ["Haydon Ryan", "AI coders and agents"]
license = "MIT"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync"] }
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "json", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
directories = "6.0"
keyring-core = "1"
regex = "1.12"
base64 = "0.22"
aes = "0.9"
cbc = "0.2"
hkdf = "0.13"
sha2 = "0.11"
hmac = "0.13"
pbkdf2 = { version = "0.13", features = ["sha2"] }
sha1 = "0.11"
rpassword = "7.5"
rsa = { version = "0.10.0-rc.18", features = ["getrandom", "sha1", "sha2"] }
zeroize = { version = "1.8", features = ["derive"] }
fs4 = "1.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1", features = ["crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1"

[dev-dependencies]
tempfile = "3.27"
wiremock = "0.6"
tokio-test = "0.4"
rstest = "0.26"
rand = "0.10"
rand_core = "0.10"
assert_cmd = "2.2"
predicates = "3.1"
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "vaultwarden_cli_bench"
harness = false

[profile.release]
strip = "symbols"
codegen-units = 1
panic = "abort"

[package.metadata.release]
allow-branch = ["main", "master"]
sign-commit = false
sign-tag = false
push = true
tag = true
publish = false
tag-name = "v{{version}}"
tag-message = "release: v{{version}}"
pre-release-commit-message = "release: v{{version}}"

[lints.clippy]
dbg_macro = "deny"
get_unwrap = "deny"
let_underscore_must_use = "deny"
map_err_ignore = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unused_result_ok = "deny"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin)"] }
